--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 	<br><br>
 	<center><h2>Canciones favoritas</h2>
 	<center>
-	<embed src="Musica1.mp3"></embed>
+	<audio src="Musica1.mp3" controls=""></audio>
 	<embed src="Musica2.mp3"></embed>
-	<embed src="Musica3.mp3"></embed>
+	<audio src="Musica3.mp3" controls=""></audio>
 	</center><br>
 	Descargar todas estas canciones + extra.<a href="Canciones.rar">Click.</a>
 </body>
